# plugin-console-test

./: README.md  pyproject.toml
.github/workflows/: build.yml
plugin/: console.py
tests/: test_console.py
