[tool.poetry]
name = "plugin-console-test"
version = "0.1.0"
description = ""
authors = ["Dan Yeaw <dan@yeaw.me>"]

[tool.poetry.dependencies]
python = "^3.8"
pygobject = "^3.34.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
